retrieve_ENO_DEV1/objects/Reservation_Staff__c.object
<CustomObject>
    <fields>
        <fullName>End__c</fullName>
        <formula>Reservation__r.B25__End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Shift__c</fullName>
        <formula>Reservation__r.B25__Reservation_Type__r.Name = &apos;Shift&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Shift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <label>Reservation</label>
        <referenceTo>B25__Reservation__c</referenceTo>
        <relationshipLabel>Reservation Staffs</relationshipLabel>
        <relationshipName>Reservation_Staffs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <label>Staff</label>
        <referenceTo>B25__Staff__c</referenceTo>
        <relationshipLabel>Reservation Staffs</relationshipLabel>
        <relationshipName>Reservation_Staffs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <formula>Reservation__r.B25__Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Response</fullName>
                    <default>true</default>
                    <label>No Response</label>
                </value>
                <value>
                    <fullName>Applied for Shift</fullName>
                </value>
                <value>
                    <fullName>Declined Shift</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reservation_Staffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reservation Staff</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Reservation Staff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservation Staffs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>